chgmgmt_build/src/objects/Portfolio__c.object
<CustomObject>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <label>残高</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ポートフォリオ</relationshipLabel>
        <relationshipName>Portfolio</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Prod_Type__c</fullName>
        <label>商品タイプ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>デリバティブ</fullName>
                </value>
                <value>
                    <fullName>エクイティ</fullName>
                </value>
                <value>
                    <fullName>Forex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prod_type_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>商品タイプ</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>ポートフォリオ</relationshipLabel>
        <relationshipName>Portfolio</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ポートフォリオ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>ポートフォリオ名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ポートフォリオ</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>